# pennylane-qrack

./: .gitignore  CMakeLists.txt  Makefile  README.rst  requirements.txt  setup.py
.github/workflows/: build-cpu.yml  build.yml
doc/devices/: ace.rst  simulator.rst
pennylane_qrack/: QrackAceDeviceConfig.toml  QrackDeviceConfig.toml  QrackStabilizerDeviceConfig.toml  _version.py  qrack_ace_device.py  qrack_device.cpp  qrack_device.py  qrack_stabilizer_device.py
